refactor(qof): improve expression node formatting and parser input
- Fixed newline handling in recursive formatted string output
- Enhanced empty result detection logic
- Updated parser test input with new conditional expression
- Streamlined string processing for better parsing accuracy